# EAE_Firmware

./: CMakeLists.txt  README.md
script/: run.sh
src/: can_sim.cpp  can_sim.h  controller.cpp  controller.h  main.cpp  state_machine.cpp  state_machine.h
test/: test_controller.cpp
